# loop_relocator

./: README.md
src/carstatemsgs/: CMakeLists.txt  package.xml
src/carstatemsgs/msg/: CarState.msg  KinematicState.msg
src/loop_relocator/: CMakeLists.txt  package.xml
src/loop_relocator/config/: general_config.yaml  qr_config.yaml
src/loop_relocator/include/: btc.h  common_lib.h  utils.h
src/loop_relocator/include/ikd-Tree/: ikd_Tree.cpp
src/loop_relocator/launch/: loop_relocator.launch  place_recognition.launch  place_recognition_test.launch  qr_target_visualizer.launch
src/loop_relocator/rviz_cfg/: loop.rviz  qr_targets.rviz
src/loop_relocator/src/: place_recognition.hpp  place_recognition_node copy.cpp  place_recognition_node.cpp  submap_match.cpp  submap_match.hpp
src/loop_relocator/src/QR_code/: qr_relocator.cpp  qr_relocator.hpp  qr_target_visualizer.cpp
src/loop_relocator/src/RTK/: rtk_relocator.cpp  rtk_relocator.hpp
